style.css
body {
font-family:'tahoma', sans-serif;
background-color: #0B0C10;
color:#66FCF1;
margin:0px;

}

#badness {
background-color:#0B0C10;
min-height: 0;
min-width: 0;
overflow:hidden;
overflow-y:scroll;

}

#yellow {
background-color:#0B0C10;
display:flex;
flex: 1;
flex-direction:column;
max-height:700px;
min-width:500px;

}

#pie {
background-color:#0B0C10;
width:300px;
height:300px;
border-radius:50%;
background: conic-gradient(#5CDB95 0.00% 25.00%, #45A29E 25.00% 50.00%, #C5C6C7 50.00% 75.00%, #1F2833 75.00% 100.00% );
align-self:center;

}

#databasedash{
background-color:#0B0C10;
max-height:400px;
overflow-y:scroll;
}

#databasemain{
    background-color:#0B0C10;
    overflow-y:scroll;
    height:70vh;
}

#navbar {
margin:0;
padding:0;
min-height:60px;
border-bottom: solid 1px #45A29E;

}

#container {
display:flex;
flex-wrap:wrap;
}

#right {
display:flex;
flex:1;
flex-direction: column;
align-self:center;
width:auto;
}

#footer {
    bottom:0;
    text-align:center;
    background-color:#1F2833;
    padding: 15px;

}

#expander {
font-size:1.5em;
height:70vh;
padding:30px;
border-radius: 10px;
border-style: double;
border-color:#66FCF1;
display:flex;
flex-direction:column;
gap:3em;
}

#submitform {
    display:flex;
    padding: 40px;
    justify-content:space-evenly;
    gap:1em;
}

#pantryformbut {
    display:flex;
    justify-content:center;
    gap:2em;
}

table {
vertical-align: middle;
margin-left:auto;
margin-right:auto;
border: 2px #66FCF1 solid;
border-collapse:collapse;
font-size:1.3em;
background-color:#0B0C10;
max-height:100%;
table-layout:fixed;

}

td {
border: 1px solid #66FCF1;
padding: 10px;
text-align: center;
overflow:hidden;
text-overflow:ellipsis;
white-space:nowrap;
}

th {
border: 1px solid #66FCF1;
padding: 10px;
text-align: center;
background-color:#0B0C10;
overflow:hidden;
text-overflow:ellipsis;
white-space:nowrap;

}

tr:nth-child(even) td {
    background-color: #1F2833;
}

tr:nth-child(odd) td {
    background-color:#0B0C10;
}

li {
float:left;
border-right:solid 1px #45A29E;

}

li a {
display:block;
color:#66FCF1;
text-align:center;
padding: 20px 25px;
text-decoration:solid;
font-weight:bold;

}

li a:hover {
    background-color:#1F2833;
}

.heading {
text-align:center;
margin-left:auto;
margin-right:auto;
text-decoration:underline;

}

.navul {
    position:fixed;
    top:0;
    width:100%;
    background-color:#0B0C10;
    list-style-type: none;
    margin: 0px;
    padding: 0px;
    overflow:hidden;
}

.bordereddiv {
border-radius: 10px;
border-style: double;
border-color:#66FCF1;
padding:15px;
}

    .bordereddiv::-webkit-scrollbar {
        width: 10px;
        height: 10px;
    }

    .borderddiv::-webkit-scrollbar-thumb {
    background-color:#66FCF1;
    border-radius: 5px;
    }

    .bordereddiv::-webkit-scrollbar-track {
    background-color:#1F2833;
    border:1px solid #45A29E;
    }

    .bordereddiv::-webkit-scrollbar-button {
    background-color:#45A29E;
    border-radius:5px;
    }

.unbordereddiv {
padding:15px;    
}

.database_form {
    padding:0;
}

input[type="text"] {
    width: 90%;
    height: 99%;
    background-color:#1F2833;
    color:#66FCF1;

}

details {
    user-select: none;
    margin-left:50px;
}

details>summary span.icon {
    width: 24px;
    height: 24px;
    transition: all 1s;
    margin-left:auto;
}

details[open] summary span.icon [
    transform: rotate(180deg);
]

summary {
    display: flex;
    cursor: pointer;
  }
  
  summary::-webkit-details-marker {
    display: none;
    margin-left: 100px;
  }

.help_list {
display:flex;
flex-direction:column;
}

.pantryform {
width:30px;
height:auto;
padding:10px;
border-color:#66FCF1;
border-radius:10px;

}

.button {
    background-color:#1F2833;
    color:#66FCF1;
    border-style:double;
    font-size:1.5em;
    border-radius:10px;
    border-color:#66FCF1;
}

